; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nvc0_pm.c_read_pll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nvc0_pm.c_read_pll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.nouveau_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_device*, i32)* @read_pll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_pll(%struct.drm_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.nouveau_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %14 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %15 = call %struct.nouveau_device* @nouveau_dev(%struct.drm_device* %14)
  store %struct.nouveau_device* %15, %struct.nouveau_device** %6, align 8
  %16 = load %struct.nouveau_device*, %struct.nouveau_device** %6, align 8
  %17 = load i32, i32* %5, align 4
  %18 = add nsw i32 %17, 0
  %19 = call i32 @nv_rd32(%struct.nouveau_device* %16, i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load %struct.nouveau_device*, %struct.nouveau_device** %6, align 8
  %21 = load i32, i32* %5, align 4
  %22 = add nsw i32 %21, 4
  %23 = call i32 @nv_rd32(%struct.nouveau_device* %20, i32 %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* %8, align 4
  %25 = and i32 %24, 4128768
  %26 = ashr i32 %25, 16
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %8, align 4
  %28 = and i32 %27, 65280
  %29 = ashr i32 %28, 8
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %8, align 4
  %31 = and i32 %30, 255
  %32 = ashr i32 %31, 0
  store i32 %32, i32* %11, align 4
  %33 = load i32, i32* %7, align 4
  %34 = and i32 %33, 1
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %67

37:                                               ; preds = %2
  %38 = load i32, i32* %5, align 4
  %39 = and i32 %38, 16773120
  switch i32 %39, label %58 [
    i32 57344, label %40
    i32 1273856, label %41
    i32 1253376, label %48
  ]

40:                                               ; preds = %37
  store i32 27000, i32* %12, align 4
  store i32 1, i32* %9, align 4
  br label %59

41:                                               ; preds = %37
  %42 = load i32, i32* %5, align 4
  %43 = sub nsw i32 %42, 1273856
  %44 = sdiv i32 %43, 32
  store i32 %44, i32* %13, align 4
  %45 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %46 = load i32, i32* %13, align 4
  %47 = call i32 @read_div(%struct.drm_device* %45, i32 %46, i32 1274144, i32 1274176)
  store i32 %47, i32* %12, align 4
  br label %59

48:                                               ; preds = %37
  %49 = load i32, i32* %5, align 4
  switch i32 %49, label %56 [
    i32 1253376, label %50
    i32 1253408, label %53
  ]

50:                                               ; preds = %48
  %51 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %52 = call i32 @read_pll(%struct.drm_device* %51, i32 1253408)
  store i32 %52, i32* %12, align 4
  br label %57

53:                                               ; preds = %48
  %54 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %55 = call i32 @read_div(%struct.drm_device* %54, i32 0, i32 1274656, i32 1274672)
  store i32 %55, i32* %12, align 4
  br label %57

56:                                               ; preds = %48
  store i32 0, i32* %3, align 4
  br label %67

57:                                               ; preds = %53, %50
  br label %59

58:                                               ; preds = %37
  store i32 0, i32* %3, align 4
  br label %67

59:                                               ; preds = %57, %41, %40
  %60 = load i32, i32* %12, align 4
  %61 = load i32, i32* %10, align 4
  %62 = mul nsw i32 %60, %61
  %63 = load i32, i32* %11, align 4
  %64 = sdiv i32 %62, %63
  %65 = load i32, i32* %9, align 4
  %66 = sdiv i32 %64, %65
  store i32 %66, i32* %3, align 4
  br label %67

67:                                               ; preds = %59, %58, %56, %36
  %68 = load i32, i32* %3, align 4
  ret i32 %68
}

declare dso_local %struct.nouveau_device* @nouveau_dev(%struct.drm_device*) #1

declare dso_local i32 @nv_rd32(%struct.nouveau_device*, i32) #1

declare dso_local i32 @read_div(%struct.drm_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
